@@ -30,4 +30,5 @@ exempt of errors.
 - Paul Vixie
 - Siva Chandran
 - Timothy Redaelli
+- Titus Winters
 
